--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,24 +1,35 @@
-
-    <h1 class="text-center col-mx-4">
-    Contact Us
+<h1 class="text-center col-mx-4">
+  Contact Us
 </h1>
 
-
-
-
 <form class="col-md-6 col-md-offset-3" method="post">
-    <div class="form-group ">
-      <label for="name">Name:</label>
-      <input type="text" class="form-control" id="name" placeholder="Enter your name">
-    </div>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter your email">
-    </div>
-    
-    <div class="form-group">
-      <label for="message">Message:</label>
-      <textarea class="form-control" id="message" rows="4" placeholder="Enter your message"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      placeholder="Enter your name"
+    />
+  </div>
+  <div class="form-group">
+    <label for="email">Email:</label>
+    <input
+      type="email"
+      class="form-control"
+      id="email"
+      placeholder="Enter your email"
+    />
+  </div>
+
+  <div class="form-group">
+    <label for="message">Message:</label>
+    <textarea
+      class="form-control"
+      id="message"
+      rows="4"
+      placeholder="Enter your message"
+    ></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
