--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+.form-signin{
+  max-width: 400px;
+  padding: 40px;
+  margin: 0 auto;
+
+}
+.padding{
+   padding-top: 10px;
+   padding-left: 10px;
+   padding-right: 10px;
+   padding-bottom: 10px;
+}
