--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,4 +1,5 @@
 <html>
+
   <head>
     <title>{{title}}</title>
 
@@ -32,6 +33,7 @@
     ></script>
 
   </head>
+
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -56,6 +58,17 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
+
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            {{#if user}}
+              <li><a href="#">{{user.name}}</a></li>
+            {{else}}
+              <li><a href="/register">Register</a></li>
+              <li><a href="/login">Login</a></li>
+
+            {{/if}}
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -64,4 +77,5 @@
     {{{body}}}
 
   </body>
+
 </html>
