--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -62,7 +62,21 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {{#if user}}
-              <li><a href="#">{{user.name}}</a></li>
+
+              <li class="dropdown">
+                <a
+                  href="#"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                  role="button"
+                  aria-expanded="false"
+                >{{user.name}} <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  
+                  <li><a href="/logout">Logout</a></li>
+                </ul>
+
+              </li>
             {{else}}
               <li><a href="/register">Register</a></li>
               <li><a href="/login">Login</a></li>
