--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,7 +51,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">StreanScript</a>
+          <a class="navbar-brand" href="/">StreamScript</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -92,4 +92,22 @@
 
   </body>
 
+</html>
+
+<!DOCTYPE html>
+<html>
+  <head>
+	<title>Example Login Form</title>
+  </head>
+  <body>
+	<form action="/login" method="post">
+  	<!-- user input-->
+  	Username:<br>
+  	<input type="text" name="username" placeholder="Username" required><br><br>
+  	Password:<br>
+  	<input type="password" name="password" placeholder="Password" required><br><br>
+  	<!-- submit button -->
+  	<input type="submit" value="login">
+	</form>
+  </body>
 </html>
