--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,9 +18,16 @@
       integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css"
+    />
 
     <link rel="stylesheet" href="/stylesheets/style.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/theme/monokai.min.css"
+    />
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"
     ></script>
@@ -70,9 +77,10 @@
                   data-toggle="dropdown"
                   role="button"
                   aria-expanded="false"
-                >{{user.name}} <span class="caret"></span></a>
+                >{{user.name}}
+                  <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  
+
                   <li><a href="/logout">Logout</a></li>
                 </ul>
 
@@ -93,4 +101,3 @@
   </body>
 
 </html>
-
