adding code screens and chatbox via codemirror

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-8">
       <textarea id="code-screen"></textarea>
     </div>
-    <div class="col-md-4" id="chatbox
+    <div class="col-md-4" id="chatbox">
       <!-- CHAT BOX HERE -->
     </div>
   </div>
