fixing the frontend view

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,20 +1,47 @@
 <div>
-  <div class="row">
-    <div class="col-md-8">
-      <textarea id="code-screen"></textarea>
+    <div class="row">
+        <div class="col-md-8">
+            <textarea id="code-screen"></textarea>
+        </div>
+        <div class="col-md-4" id="chatbox">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+
+                    CHAT ROOM
+                    <span class="pull-right" id="chatbox-username">
+                        {{#if user}}
+                        {{user.name}}
+                        {{/if}}
+                    </span>
+
+                </div>
+                <div class="panel-body">
+                    <ul class="media-list" style="height: 380px; overflow-y : scroll " id="chatbox-listMessages">
+
+                    </ul>
+
+                </div>
+                <div class="panel-footer">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="chatbox-message" placeholder="Enter Message" id="userMessage">
+                        <span class="input-group-btn">
+                            <button class="btn btn-primary" id="chatbox-sendMessage" type="button">SEND</button>
+                        </span>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
     </div>
-    <div class="col-md-4" id="chatbox">
-      <!-- CHAT BOX HERE -->
-    </div>
-  </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/javascript/javascript.min.js"></script>
 
 <script>
-  var editor = CodeMirror.fromTextArea(document.getElementById("code-screen"), {
-    lineNumbers: true,
-    theme: "monokai"
-  });
+    var editor = CodeMirror.fromTextArea(document.getElementById("code-screen"), {
+        lineNumbers: true, theme: "monokai"
+    });
 </script>
