fixing the frontend view #2

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -25,7 +25,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" id="chatbox-message" placeholder="Enter Message" id="userMessage">
                         <span class="input-group-btn">
-                            <button class="btn btn-primary" id="chatbox-sendMessage" type="button">SEND</button>
+                            <button class="btn btn-primary" onclick="sendMessage()" id="chatbox-sendMessage" type="button">SEND</button>
                         </span>
 
                     </div>
