--- a/views/task.hbs
+++ b/views/task.hbs
@@ -41,7 +41,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/javascript/javascript.min.js"></script>
-
+<script  src="/socket.io/socket.io.js" >
 <script>
     const socket = io.connect("http://localhost:3000/") const editor =
         CodeMirror.fromTextArea(document.getElementById("code-screen"), {
