--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,75 +1,74 @@
 <div>
-    <div class="row">
-        <div class="col-md-8">
-            <textarea id="code-screen"></textarea>
-        </div>
-        <div class="col-md-4" id="chatbox">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-
-                    CHAT ROOM
-                    <span class="pull-right" id="chatbox-username">
-                        {{#if user}}
-                        {{user.name}}
-                        {{/if}}
-                    </span>
-
-                </div>
-                <div class="panel-body">
-                    <ul class="media-list" style="height: 380px; overflow-y : scroll " id="chatbox-listMessages">
-
-                    </ul>
-
-                </div>
-                <div class="panel-footer">
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="chatbox-message" placeholder="Enter Message"
-                            id="userMessage" />
-                        <span class="input-group-btn">
-                            <button class="btn btn-primary" onclick="sendMessage()" id="chatbox-sendMessage"
-                                type="button">SEND</button>
-                        </span>
-
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-md-8">
+      <textarea id="code-screen"></textarea>
     </div>
+    <div class="col-md-4" id="chatbox">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          CHAT ROOM
+          <span class="pull-right" id="chatbox-username">
+            {{#if user}}
+              {{user.name}}
+            {{/if}}
+          </span>
+        </div>
+        <div class="panel-body">
+          <ul class="media-list" style="heigh: 300px; overflow-y: scroll" id="chatbox-listMessages">
+
+          </ul>
+        </div>
+        <div class="panel-footer">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Enter message" id="userMessage"/>
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-primary" onclick="sendMessage()">SEND</button>
+            </span>
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
+  </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/javascript/javascript.min.js"></script>
-<script  src="/socket.io/socket.io.js" >
+
+<script src="/socket.io/socket.io.js"></script>
+
 <script>
-    const socket = io.connect("http://localhost:3000/") const editor =
-        CodeMirror.fromTextArea(document.getElementById("code-screen"), {
-            lineNumbers:
-                true, theme: "monokai"
-        }); 
-        
-        const username = $("#chatbox-username").val(); if
-        (username === "") {
-        const userId = Math.floor(Math.random() *
-            9999).toString(); $("#chatbox-username").text(username);
-    }
-     const userMessage =
-        function (name, text) {
-            return (return (`<li class="media"> <div
-  class="media-body" > <div class="media">' + '<div class="media-body"' + '<b>' +
-                name + '</b> : ' + text + '<hr /> </div></div ></div ></li > ` ); )
-        }
+  const socket = io.connect('http://localhost:3000');
+  const editor = CodeMirror.fromTextArea(document.getElementById("code-screen"), {
+    lineNumbers: true,
+    theme: "monokai"
+  });
 
+  let username = $("#chatbox-username").val();
+  if(username === "") {
+    const userId = Math.floor(Math.random() * 9999).toString();
+    username = "User" + userId;
+    $("#chatbox-username").text(username);
+  };
 
-    var sendMessage = function () {
-        var userMessage = $('#userMessage').val();
-        socket.emit('chatMessage', { message: userMessage, username: username });
-        $('#userMessage').val("");
-    };
+  const userMessage = function(name, text) {
+    return ('<li class="media"> <div class="media-body"> <div class="media">' +
+      '<div class="media-body"' +
+      '<b>' + name + '</b> : ' + text +
+      '<hr/> </div></div></div></li>'
+    );
+  };
 
-    socket.on('chatMessage', function (data) {
-        $('#chatbox-listMessages').append(userMessage(data.username, data.message));
-    });
+  const sendMessage = function() {
+    const userMessage = $('#userMessage').val();
+    socket.emit('chatMessage', {message: userMessage, username: username});
+    $('#userMessage').val("");
+  };
+
+  socket.on('chatMessage', function(data) {
+    $('#chatbox-listMessages').append(userMessage(data.username, data.message));
+  });
 
 </script>
