--- a/views/task.hbs
+++ b/views/task.hbs
@@ -56,6 +56,7 @@
   };
 
   var roomId = $('#roomID').val();
+  socket.emit('joinRoom',{room : roomId})
 
   const userMessage = function(name, text) {
     return ('<li class="media"> <div class="media-body"> <div class="media">' +
